# mscbots

./: README.md  selfbot.py
jkprotect/: 1.bat  data.sqlite3  ez.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  sqlite3_manipul.py
jkprotect/cogs/: ab.py  ac.py  antilink.py  antispam.py  dev.py  help.py  information.py  logs.py  mod.py  owner.py  wildeleted.py
offender/: main.py  pyproject.toml  replit_zip_error_log.txt
protector/: main.py  pyproject.toml  replit.nix
skillprotect/: main.py  pyproject.toml  replit_zip_error_log.txt  servers.json
skillprotect msc/: config.json  configv2.json  main.py  pyproject.toml  whitelisted.json
skillprotect msc/Tools/: utils.py
skillprotect msc/cogs/: AntiNuke.py  Captcha Join.py  Errors.py  Events.py  Help command.py  Join Filter.py  Rolemanagement.py  disable.py  general commands.py  join_role.py  onMessage.py  prefix.py  setup.py
